--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         </tr>
                         <!--Example Type your Real time-->
                         <tr>
-                            <td>حمس مرات</td>
+                            <td>خمس مرات</td>
                             <td>20 صفحة</td>
                             <td>20 صفحة</td>
                             <td>20 صفحة</td>
